--- a/src/index.html
+++ b/src/index.html
@@ -23397,7 +23397,9 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                                 bestaat uit 4 trompetten, 4 trombones, 5 saxofoons, en een ritmesectie:
                                                 drums, bas, gitaar en piano. Dit wordt aangevuld met een percussionist,
                                                 een zanger en twee zangeressen!</p>
-                                            <p> </p>
+                                            <p>Stuur een berichtje naar <a
+                                                    href="mailto:info@twotowerscollective.nl">info@twotowerscollective.nl</a>
+                                                voor meer informatie.</p>
                                         </div>
                                     </div>
                                 </div>
