update band members

--- a/src/index.html
+++ b/src/index.html
@@ -23397,6 +23397,7 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                                 bestaat uit 4 trompetten, 4 trombones, 5 saxofoons, en een ritmesectie:
                                                 drums, bas, gitaar en piano. Dit wordt aangevuld met een percussionist,
                                                 een zanger en twee zangeressen!</p>
+                                            <p>&nbsp;</p>
                                             <p>Stuur een berichtje naar <a
                                                     href="mailto:info@twotowerscollective.nl">info@twotowerscollective.nl</a>
                                                 voor meer informatie.</p>
@@ -23420,35 +23421,33 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                         <p> </p>
                                         <h4>Dirigent</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Johan Hager</li>
+                                            <li>Jurgen</li>
                                         </ul>
                                         <h4>Gast zang</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Jetze Koster, Cindy Mason, Sietske de Boer</li>
+                                            <li>Jetze, Cindy, Sietske</li>
                                         </ul>
                                         <h4>Ritmesectie</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Drums: Sjouke Helfrich</li>
-                                            <li>Percussie: Remco Bosma</li>
-                                            <li>Bas: Anno Kooistra</li>
-                                            <li>Gitaar: VACATURE</li>
+                                            <li>Drums: Siebe</li>
+                                            <li>Percussie: Remco</li>
+                                            <li>Bas: Johan</li>
+                                            <li>Gitaar: Joris</li>
                                             <li>Piano: VACATURE</li>
                                         </ul>
                                         <h4>Saxofoons</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Altsaxofoon: Willy Terpstra, Tjipke Travaille</li>
-                                            <li>Tenorsaxofoon: Marco Brunia</li>
-                                            <li>Baritonsaxofoon: Lianne Heidekamp</li>
+                                            <li>Altsaxofoon: Willy, Tjipke</li>
+                                            <li>Tenorsaxofoon: Marco, André, Sanne</li>
+                                            <li>Baritonsaxofoon: Lianne</li>
                                         </ul>
                                         <h4>Trombones</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Sieb Kerkstra, Pieter de Bos</li>
-                                            <li>Henk Bles, Jan Berend Dijkstra</li>
+                                            <li>Sieb, Henk, Jan Berend</li>
                                         </ul>
                                         <h4>Trompetten</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Erwin de Vos, Femke Kooistra</li>
-                                            <li>Leks ter Schuur, Peter Donderwinkel</li>
+                                            <li>Erwin, Kas, Ate Durk, Leks, Peter</li>
                                         </ul>
                                         <div>
                                             <p> </p>
