--- a/src/index.html
+++ b/src/index.html
@@ -23468,15 +23468,28 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                         <h4></h4>
                                         <p> </p>
                                         <ul>
-                                            <li>All about that base</li>
-                                            <li>Dancing in the street</li>
-                                            <li>Deacon blues</li>
-                                            <li>Estate</li>
-                                            <li>Libertango</li>
-                                            <li>Mack the knife</li>
-                                            <li>The bare necessities</li>
-                                            <li>The frim fram sauce</li>
-                                            <li>Welcome to the jungle</li>
+                                            <li>A Night Like This</li>
+                                            <li>Afro Blue</li>
+                                            <li>Atchafalaya</li>
+                                            <li>Children of Sanchez</li>
+                                            <li>Deasiado Corazon</li>
+                                            <li>Getaway</li>
+                                            <li>Guantanamera</li>
+                                            <li>It Had Better Be Tonight</li>
+                                            <li>La Bamba</li>
+                                            <li>La Bella Maria</li>
+                                            <li>La Negra Tomasa</li>
+                                            <li>Lettuce Leaf</li>
+                                            <li>Mambo Swing</li>
+                                            <li>Manteca</li>
+                                            <li>Misirlou</li>
+                                            <li>Montego Bay</li>
+                                            <li>Move on Up</li>
+                                            <li>September</li>
+                                            <li>That Man</li>
+                                            <li>The Chicken</li>
+                                            <li>Tune It Up!</li>
+                                            <li>Welcome to the Jungle</li>
                                         </ul>
                                     </div>
                                 </div>
