--- a/src/index.html
+++ b/src/index.html
@@ -23472,7 +23472,7 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                             <li>Afro Blue</li>
                                             <li>Atchafalaya</li>
                                             <li>Children of Sanchez</li>
-                                            <li>Deasiado Corazon</li>
+                                            <li>Demasiado Corazon</li>
                                             <li>Getaway</li>
                                             <li>Guantanamera</li>
                                             <li>It Had Better Be Tonight</li>
