Andre speelt alt

--- a/src/index.html
+++ b/src/index.html
@@ -23437,8 +23437,8 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                         </ul>
                                         <h4>Saxofoons</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Altsaxofoon: Willy, Tjipke</li>
-                                            <li>Tenorsaxofoon: Marco, André, Sanne</li>
+                                            <li>Altsaxofoon: Willy, Tjipke, André</li>
+                                            <li>Tenorsaxofoon: Marco, Sanne</li>
                                             <li>Baritonsaxofoon: Lianne</li>
                                         </ul>
                                         <h4>Trombones</h4>
