--- a/src/index.html
+++ b/src/index.html
@@ -23485,7 +23485,7 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                         </ul>
                                         <h4>Trombones</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Sieb, Henk, Jan Berend, Niels</li>
+                                            <li>Sieb, Henk, Jan Berend, Gerrit</li>
                                         </ul>
                                         <h4>Trompetten</h4>
                                         <ul class="list-arrow-red">
