--- a/src/index.html
+++ b/src/index.html
@@ -23467,7 +23467,7 @@ Tags: custom-colors, custom-background, custom-menu, featured-images, translatio
                                         </ul>
                                         <h4>Gast zang</h4>
                                         <ul class="list-arrow-red">
-                                            <li>Jetze, Cindy, Sietske</li>
+                                            <li>Jetze, Cindy, Leonie, Wendy, Yldou</li>
                                         </ul>
                                         <h4>Ritmesectie</h4>
                                         <ul class="list-arrow-red">
